# CPP_AUG

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/inc/common/: CommonEnums.h  CommonStructs.h  NameGenerators.h
src/inc/controllers/: AugmentationFacade.h  AugumentationFacade.h  GuiController.h
src/inc/factories/: FilterFactory.h  IFactory.h  IFilterFactory.h  RotationFilterFactory.h
src/inc/filters/: FilterRotateImg.h  IFilterCommand.h
src/inc/io/: Directory.h  DirectoryFileFilter.h  DirectoryFilter.h  ILoadImg.h  ISaveImg.h  LoadOpencvImg.h  SaveOpencvImg.h
src/inc/models/: IModel.h  OperationModel.h
src/inc/views/: IView.h  MainView.h
src/src/common/: NameGenerators.cpp
src/src/controllers/: AugmentationFacade.cpp  AugumentationFacade.cpp  GuiController.cpp
src/src/factories/: FilterFactory.cpp  RotationFilterFactory.cpp
src/src/filters/: FilterRotateImg.cpp
src/src/io/: Directory.cpp  DirectoryFileFilter.cpp  DirectoryFilter.cpp  LoadOpencvImg.cpp  SaveOpencvImg.cpp
src/src/models/: OperationModel.cpp
src/src/views/: MainView.cpp
test/: CMakeLists.txt  DirectoryFilterTests.cpp  OperationModelTests.cpp  tests.cpp
